--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     document.documentElement.classList.add('js');
   </script>
 
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/print.css" media="print">
 
   <meta name="description" content="David Ko is a West Coast Canadian of Korean descent.">
@@ -33,7 +33,37 @@
 </head>
 
 <body>
-  <h1>David Ko</h1>
+  <div id = "home" class= "section vimeo">
+	  <h1>David Ko</h1>
+	  <nav>
+		  <a href="#about">About</a>
+		  <a href="#works">Works</a>
+		  <a href="#collaborations">Collaborations</a>
+		  <a href="#contact">Contact</a>
+	  </nav>
+	  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+  </div>
+  
+  <div id = "about" class= "section">
+	  <h1>About</h1>
+	  
+  </div>
+  
+  <div id = "works" class= "section">
+	  <h1>Works</h1>
+	  
+  </div>
+  
+  <div id = "collaborations" class= "section">
+	  <h1>Collaborations</h1>
+	  
+  </div>
+  
+  <div id = "contact" class= "section">
+	  <h1>Contact</h1>
+	  
+  </div>
+  <script src="https://player.vimeo.com/api/player.js"></script>
   <script src="/assets/js/xy-polyfill.js" nomodule></script>
   <script src="/assets/js/script.js" type="module"></script>
 </body>
