--- a/index.html
+++ b/index.html
@@ -33,35 +33,51 @@
 </head>
 
 <body>
-  <div id = "home" class= "section vimeo">
-	  <h1>David Ko</h1>
-	  <nav>
-		  <a href="#about">About</a>
-		  <a href="#works">Works</a>
-		  <a href="#collaborations">Collaborations</a>
-		  <a href="#contact">Contact</a>
-	  </nav>
-	  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+  <div id="home" class="r section">
+      <h1>David Ko</h1>
+      <nav>
+          <a href="#about">About</a>
+          <a href="#works">Works</a>
+          <a href="#collaborations">Collaborations</a>
+          <a href="#contact">Contact</a>
+      </nav>
+  </div>
+  <div class="r section">
+        <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+  </div>
+  <div id="about" class="r section">
+      <h1>About</h1>
+      <p>
+          David Ko is a West Coast Canadian of Korean descent. He draws inspiration from artists
+          such as Eliane Radigue and Morton Feldman. The aesthetics of Korean evangelism – and crossroads between technology and spiritualism in general – are also points of fascination. By using guitar amps and live amplification, he seeks to magnify the warmth of the smallest sounds, both digital and acoustic. The use of Music production practices also play an important role in influencing the sound design. 
+          </p>
+          <p>
+          He is a member of the Indie-Folk band Melqui.
+          </p>
+          <p>
+          He has studied composition with Rodney Sharman, Richard Ayres, Joël Bons, and Jorrit Tamminga. He is currently a Masters student of composition at the Conservatorium van Amsterdam.
+      </p>
+      <a href="cv-david-ko.pdf">CV</a>
   </div>
   
-  <div id = "about" class= "section">
-	  <h1>About</h1>
-	  
+  <div id="works" class="r section">
+      <h1>Works</h1>
+      <div><h2>The Psalm Song</h2>
+      </div>
   </div>
   
-  <div id = "works" class= "section">
-	  <h1>Works</h1>
-	  
+  <div id="collaborations" class="r section">
+      <h1>Collaborations</h1>
+     <div><h2>Homies Prayers</h2> 
+         
+     </div>
+     <div><h2>Melqui</h2>
+     </div>
   </div>
   
-  <div id = "collaborations" class= "section">
-	  <h1>Collaborations</h1>
-	  
-  </div>
-  
-  <div id = "contact" class= "section">
-	  <h1>Contact</h1>
-	  
+  <div id="contact" class="r section">
+      <h1>Contact</h1>
+      <a href="mailto:davidjcko97@gmail.com">E-mail</a>
   </div>
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script src="/assets/js/xy-polyfill.js" nomodule></script>
