--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/assets/css/print.css" media="print">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
 
   <meta name="description" content="David Ko is a West Coast Canadian of Korean descent.">
   <meta property="og:title" content="David Ko">
@@ -33,52 +36,68 @@
 </head>
 
 <body>
-  <div id="home" class="r section">
-      <h1>David Ko</h1>
-      <nav>
-          <a href="#about">About</a>
-          <a href="#works">Works</a>
-          <a href="#collaborations">Collaborations</a>
-          <a href="#contact">Contact</a>
-      </nav>
-  </div>
-  <div class="r section">
-        <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
-  </div>
-  <div id="about" class="r section">
-      <h1>About</h1>
-      <p>
+    <section>
+        <div class="r l block">
+              <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+        </div>
+    </section>
+	<section>
+        <div class="r s scroll">
+  <div id="about" class="r l block">
+          <h1 class="p">About</h1>
+          <p class="p">
           David Ko is a West Coast Canadian of Korean descent. He draws inspiration from artists
           such as Eliane Radigue and Morton Feldman. The aesthetics of Korean evangelism – and crossroads between technology and spiritualism in general – are also points of fascination. By using guitar amps and live amplification, he seeks to magnify the warmth of the smallest sounds, both digital and acoustic. The use of Music production practices also play an important role in influencing the sound design. 
           </p>
-          <p>
+          <p class="p">
           He is a member of the Indie-Folk band Melqui.
           </p>
-          <p>
+          <p class="p">
           He has studied composition with Rodney Sharman, Richard Ayres, Joël Bons, and Jorrit Tamminga. He is currently a Masters student of composition at the Conservatorium van Amsterdam.
       </p>
-      <a href="cv-david-ko.pdf">CV</a>
+      <p class="p">
+      <a href="cv-david-ko.pdf">CV</a><p>
   </div>
   
-  <div id="works" class="r section">
-      <h1>Works</h1>
-      <div><h2>The Psalm Song</h2>
+  <div id="works" class="r l block">
+      <h1 class="p">Works</h1>
+      <div><h2 class="p">The Psalm Song</h2>
+          <p class="p">
+		  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+		  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+      </p>
       </div>
   </div>
   
-  <div id="collaborations" class="r section">
-      <h1>Collaborations</h1>
-     <div><h2>Homies Prayers</h2> 
+  <div id="collaborations" class="r l block">
+      <h1 class="p">Collaborations</h1>
+     <div><h2 class="p">Homies Prayers</h2> 
          
      </div>
-     <div><h2>Melqui</h2>
+     <div><h2 class="p">Melqui</h2>
      </div>
   </div>
   
-  <div id="contact" class="r section">
-      <h1>Contact</h1>
-      <a href="mailto:davidjcko97@gmail.com">E-mail</a>
+  <div id="contact" class="r l block">
+      <h1 class="p">Contact</h1>
+      <nav class="p">
+      <a href="mailto:davidjcko97@gmail.com">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
+      </nav>
   </div>
+</div>
+</section>
+<section class="sticky">
+    <div id="home" class="r l block">
+        <h1 class="p n hi">David Ko</h1>
+        <nav class="p n sc">
+            <a href="#about"tabindex="1">About</a>
+            <a href="#works"tabindex="1">Works</a>
+            <a href="#collaborations"tabindex="1">Collaborations</a>
+            <a href="#contact"tabindex="1">Contact</a>
+        </nav>
+    </div>
+</section>
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script src="/assets/js/xy-polyfill.js" nomodule></script>
   <script src="/assets/js/script.js" type="module"></script>
