--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap" rel="stylesheet">
 
   <meta name="description" content="David Ko is a West Coast Canadian of Korean descent.">
   <meta property="og:title" content="David Ko">
@@ -38,10 +40,11 @@
 <body>
     <section>
         <div class="r c block">
-              <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+              <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&autoplay=1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
         </div>
     </section>
-	<section>
+<!--Main content-->
+	<section class="r">
         <div class="r s scroll">
   <div id="about" class="r l block">
           <h1 class="p">About</h1>
