--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
 </head>
 
 <body>
-    <section>
-        <div class="r c block">
-              <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&autoplay=1&muted=1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+    <main>
+<!--Video-->
+    <section class="header">
+        <div id="home" class="r c block">
+              <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&autoplay=1&muted=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
         </div>
     </section>
 <!--Main content-->
-	<section class="r">
-        <div class="r s scroll">
+	<section class="content">
   <div id="about" class="r l block">
           <h1 class="p">About</h1>
           <p class="p">
@@ -88,12 +89,13 @@
       <a href="mailto:davidjcko97@gmail.com">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
       </nav>
   </div>
-</div>
 </section>
-<section class="sticky">
-    <div id="home" class="r l block">
+<!--Menu-->
+<section class="footer">
+    <div id="menu" class="r l block">
         <h1 class="p n hi">David Ko</h1>
         <nav class="p n sc">
+            <a href="#home"tabindex="1">Home</a>
             <a href="#about"tabindex="1">About</a>
             <a href="#works"tabindex="1">Works</a>
             <a href="#collaborations"tabindex="1">Collaborations</a>
@@ -101,6 +103,7 @@
         </nav>
     </div>
 </section>
+</main>
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script src="/assets/js/xy-polyfill.js" nomodule></script>
   <script src="/assets/js/script.js" type="module"></script>
