First draft for review, menu change

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 <!--Menu-->
 <section class="footer">
     <div id="menu" class="r l block">
-        <h1 class="p n hi">David Ko</h1>
+        <h1 class="p n hi"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
         <nav class="p n sc">
-            <a href="#home"tabindex="1">Home</a>
             <a href="#about"tabindex="1">About</a>
             <a href="#works"tabindex="1">Works</a>
             <a href="#collaborations"tabindex="1">Collaborations</a>
