--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <p class="p">
 		  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
       </p><p class="p">
-           ?   
+           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
       </p>
       </div>
   </article>
