First draft for review, paragraph

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <p class="p">
           He has studied composition with Rodney Sharman, Richard Ayres, Joël Bons, and Jorrit Tamminga. He is currently a Masters student of composition at the Conservatorium van Amsterdam.
       </p>
-      <a class="p" href="cv-david-ko.pdf">CV</a>
+      <p class="p">
+      <a href="cv-david-ko.pdf">CV</a></p>
   </article>
   
   <article id="works" class="r l block">
