--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>David Ko</title>
+  <title>Kavid Do</title>
 
   <script type="module">
     document.documentElement.classList.remove('no-js');
@@ -16,9 +16,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet"> 
 
   <meta name="description" content="David Ko is a West Coast Canadian of Korean descent.">
-  <meta property="og:title" content="David Ko">
+  <meta property="og:title" content="Kavid Do">
   <meta property="og:description" content="David Ko is a West Coast Canadian of Korean descent.">
   <!-- <meta property="og:image" content=""> -->
   <!-- <meta property="og:image:alt" content="Image description"> -->
