CSS Print settings

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <main>
 <!--Video-->
-    <section class="header">
+    <section class="noprint">
         <div id="home" class="r c block">
               <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&autoplay=1&muted=1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
         </div>
@@ -61,7 +61,7 @@
           <p class="p">
           He has studied composition with Rodney Sharman, Richard Ayres, Joël Bons, and Jorrit Tamminga. He is currently a Masters student of composition at the Conservatorium van Amsterdam.
       </p>
-      <p class="p">
+      <p class="p noprint">
       <a href="cv-david-ko.pdf">CV</a></p>
   </article>
   
@@ -89,13 +89,14 @@
   
   <article id="contact" class="r l block">
       <h1 class="p">Contact</h1>
-      <nav class="p">
+      <nav class="p noprint">
       <a href="mailto:davidjcko97@gmail.com">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
       </nav>
+      <p class="p printonly">Email: davidjcko97@gmail.com<br>Instagram: @kavid.do</p>
   </article>
 </section>
 <!--Menu-->
-<section class="footer">
+<footer class="noprint">
     <div id="menu" class="r l block">
         <h1 class="p n hi"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
         <nav class="p n sc">
@@ -105,7 +106,7 @@
             <a href="#contact"tabindex="1">Contact</a>
         </nav>
     </div>
-</section>
+</footer>
 </main>
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script src="/assets/js/xy-polyfill.js" nomodule></script>
