--- a/index.html
+++ b/index.html
@@ -48,56 +48,68 @@
 <!--Main content-->
 	<section class="content">
   <article id="about" class="r l block">
-          <h1 class="p">About</h1>
-          <p class="p">
+          <h1>About</h1>
+          <img class="r img-about" src="portrait-kavid-do.jpg">
+          <p>
           David Ko is a West Coast Canadian of Korean descent. He draws inspiration from artists
-          such as Eliane Radigue and Morton Feldman. The aesthetics of Korean evangelism&thinsp;&mdash;&thinsp;and crossroads between technology and spiritualism in general&thinsp;&mdash;&thinsp;are also points of fascination. 
+          such as <span class="n">Eliane Radigue</span> and <span class="n">Morton Feldman</span>. The aesthetics of Korean evangelism&thinsp;&mdash;&thinsp;and crossroads between technology and spiritualism in general&thinsp;&mdash;&thinsp;are also points of fascination. 
           </p>
-          <p class="p">By using guitar amps and live amplification, he seeks to magnify the warmth of the smallest sounds, both digital and acoustic. The use of Music production practices also play an important role in influencing the sound design. 
+          <p>By using guitar amps and live amplification, he seeks to magnify the warmth of the smallest sounds, both digital and acoustic. The use of Music production practices also play an important role in influencing the sound design. 
           </p>
-          <p class="p">
+          <p>
           He is a member of the Indie-Folk band Melqui.
           </p>
-          <p class="p">
-          He has studied composition with Rodney Sharman, Richard Ayres, Joël Bons, and Jorrit Tamminga. He is currently a Masters student of composition at the Conservatorium van Amsterdam.
+          <p>
+          He has studied composition with <span class="n">Rodney Sharman,</span> <span class="n">Richard Ayres,</span> <span class="n">Joël Bons,</span> and <span class="n">Jorrit Tamminga.</span> He is currently a Masters student of composition at the Conservatorium van Amsterdam.
       </p>
       <p class="p noprint">
-      <a href="cv-david-ko.pdf">CV</a></p>
+      <a href="cv-kavid-do.pdf">CV</a></p>
   </article>
-  
   <article id="works" class="r l block">
-      <h1 class="p">Works</h1>
-      <div><h2 class="p">The Psalm Song</h2>
-          <p class="p">
+      <h1>Works</h1>
+      <h2>The Psalm Song</h2>
+          <p>
 		  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-<p class="p">
+<p>
 		  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
-      </p><p class="p">
-           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
       </p>
-      </div>
   </article>
   
   <article id="collaborations" class="r l block">
-      <h1 class="p">Collaborations</h1>
-     <div><h2 class="p">Homies Prayers</h2> 
-         
-     </div>
-     <div><h2 class="p">Melqui</h2>
-     </div>
+      <h1>Collaborations</h1>
+     <h2>Homies Prayers</h2> 
+         <p>
+             Homies Prayers is an ongoing performance collaboration with artist <span class="n">Monica Mays</span>. 
+         </p>
+         <figure>
+         <img class="r img-full" src="homies-prayers-amsterdam.jpg">
+         <figcaption>(Come Together V, Frascati Theater, Amsterdam, 2020)</figcaption>
+         </figure>
+         <figure>
+         <img class="r img-full" src="homies-prayers-brussels.jpg">
+         <figcaption>(Art Brussels, Nosbaum Reding, Brussels, 2022)</figcaption>
+         </figure>
+    
+    <h2>Melqui</h2>
+         <p>
+             The 7-piece band of Argentine composer <span class="n">Lautaro Hochman</span>. Melqui's music is an intimate one, comparable to <span class="n">Elliott Smith</span> or <span class="n">Connan Mockasin</span>, made of many layers of background vocals and guitar sounds, as well as Latin American and Indie music influences. 
+             </p>
+             <p>
+             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to the debut EP on Spotify.</a>
+         </p>
   </article>
   
   <article id="contact" class="r l block">
-      <h1 class="p">Contact</h1>
+      <h1>Contact</h1>
       <nav class="p noprint">
-      <a href="mailto:davidjcko97@gmail.com">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
+      <a href="mailto:kavidjcdo@gmail.com">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
       </nav>
-      <p class="p printonly">Email: davidjcko97@gmail.com<br>Instagram: @kavid.do</p>
+      <p class="p printonly">Email: kavidjcdo@gmail.com<br>Instagram: @kavid.do</p>
   </article>
 </section>
 <!--Menu-->
 <footer class="noprint">
-    <div id="menu" class="r l block">
+    <article id="menu" class="r l block">
         <h1 class="p n hi"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
         <nav class="p n sc">
             <a href="#about"tabindex="1">About</a>
@@ -105,7 +117,7 @@
             <a href="#collaborations"tabindex="1">Collaborations</a>
             <a href="#contact"tabindex="1">Contact</a>
         </nav>
-    </div>
+    </article>
 </footer>
 </main>
   <script src="https://player.vimeo.com/api/player.js"></script>
