Content update 17-10-22 -- fix

--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
              The 7-piece band of Argentine composer <span class="n">Lautaro Hochman</span>. Melqui's music is an intimate one, comparable to <span class="n">Elliott Smith</span> or <span class="n">Connan Mockasin</span>, made of many layers of background vocals and guitar sounds, as well as Latin American and Indie music influences. 
              </p>
              <p>
-             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to the debut EP on Spotify.</a>
+             <a class="noprint"href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to the debut EP on Spotify.</a>
+             <figure class="printonly qr">
+                 <img src="melqui-qr-code.png">
+             <figcaption class="printonly">Listen to the debut EP on Spotify.</figcaption>
+         </figure>
          </p>
   </article>
   
