--- a/index.html
+++ b/index.html
@@ -51,16 +51,13 @@
           <h1>About</h1>
           <img class="r img-about" src="portrait-kavid-do.jpg">
           <p>
-          David Ko is a West Coast Canadian of Korean descent. He draws inspiration from artists
-          such as <span class="n">Eliane Radigue</span> and <span class="n">Morton Feldman</span>. The aesthetics of Korean evangelism&thinsp;&mdash;&thinsp;and crossroads between technology and spiritualism in general&thinsp;&mdash;&thinsp;are also points of fascination. 
-          </p>
-          <p>By using guitar amps and live amplification, he seeks to magnify the warmth of the smallest sounds, both digital and acoustic. The use of Music production practices also play an important role in influencing the sound design. 
-          </p>
-          <p>
-          He is a member of the Indie-Folk band Melqui.
-          </p>
-          <p>
-          He has studied composition with <span class="n">Rodney Sharman,</span> <span class="n">Richard Ayres,</span> <span class="n">Joël Bons,</span> and <span class="n">Jorrit Tamminga.</span> He is currently a Masters student of composition at the Conservatorium van Amsterdam.
+          David Ko was born in 1997 in Seoul, South Korea. He spent most of his youth in the suburbs of Canada, where he first learned to compose and play the piano. In  2014-15 he studied composition privately with <span class="n">Rodney Sharman, and in 2015 he moved to Amsterdam to study at the <i>Conservatorium van Amsterdam</i>, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres</span>. He has previously studied Classical piano with <span class="n">David Kuyken</span>.
+      </p>
+      <p>
+      His music is primarily concerned with intersections between intonation theory, recording technique, and sound design. His music has been performed in halls such as Korzo, <span class="n">Muziekgebouw aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists Monica Mays and Min Oh and theatre director <span class="n">Rebekka Nilsson</span>,  both as a composer and performer. 
+      </p>
+      <p>
+          He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam School of the Arts. In 2018, his piece Let's Talk About Heritage received the SOCAN young composer's award. 
       </p>
       <p class="p noprint">
       <a href="cv-kavid-do.pdf">CV</a></p>
