--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
       <p class="p noprint">
       <a href="cv-kavid-do.pdf">CV</a></p>
   </article>
+  
+    <article id="works" class="r l block">
+        <h1>Upcoming projects</h1>
+        <h2>Psalm Songs </h2>
+            <p>
+                April 29, Splendor ; May 11, Composer's Festival, Conservatorium van Amsterdam 
+            </p>
+        <h2>Untitled Opera</h2>
+            <p>
+                March 10-11, Opera Forward Festival
+        </p>
+    </article>
+  
   <article id="works" class="r l block">
       <h1>Works</h1>
       <h2>The Psalm Song</h2>
