--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1>Upcoming projects</h1>
         <h2>Psalm Songs </h2>
             <p>
-                April 29, Splendor ; May 11, Composer's Festival, Conservatorium van Amsterdam 
+                April 29, Splendor<br>May 11, Composer's Festival, Conservatorium van Amsterdam 
             </p>
         <h2>Untitled Opera</h2>
             <p>
