Upcoming menu add

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a href="cv-kavid-do.pdf">CV</a></p>
   </article>
   
-    <article id="works" class="r l block">
+    <article id="upcoming" class="r l block">
         <h1>Upcoming projects</h1>
         <h2>Psalm Songs </h2>
             <p>
@@ -127,6 +127,7 @@
         <h1 class="p n hi"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
         <nav class="p n sc">
             <a href="#about"tabindex="1">About</a>
+            <a href="#upcoming"tabindex="1">Upcoming</a>
             <a href="#works"tabindex="1">Works</a>
             <a href="#collaborations"tabindex="1">Collaborations</a>
             <a href="#contact"tabindex="1">Contact</a>
