--- a/index.html
+++ b/index.html
@@ -124,13 +124,14 @@
 <!--Menu-->
 <footer class="noprint">
     <article id="menu" class="r l block">
-        <h1 class="p n hi"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
+        <h1 class="p n hi sc"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
         <nav class="p n sc">
             <a href="#about"tabindex="1">About</a>
             <a href="#upcoming"tabindex="1">Upcoming</a>
             <a href="#works"tabindex="1">Works</a>
             <a href="#collaborations"tabindex="1">Collaborations</a>
             <a href="#contact"tabindex="1">Contact</a>
+            <div class="gradient"></div>
         </nav>
     </article>
 </footer>
